--- a/FormApp/app/src/main/res/values/strings.xml
+++ b/FormApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Form</string>
+    <string name="default_web_client_id">Form</string>
 <string-array name="country_codes">
     <item>91</item>
     <item>81</item>
