--- a/FormApp/app/src/main/res/values/strings.xml
+++ b/FormApp/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
+    <string name="facebook_app_id">317686814280151</string>
+    <string name="fb_login_protocol_scheme">fb1234</string>
+    <string name="facebook_client_token">56789</string>
     <string name="app_name">Form App</string>
     <string name="default_web_client_id">AIzaSyD14Ybg5CwptHpJ06p1lUgJw9U8HZ4NSXY</string>
-<string-array name="country_codes">
-    <item>91</item>
-    <item>81</item>
-    <item>71</item>
-</string-array>
-<string-array name="states">
-    <item>Tamil Nadu</item>
-    <item>Delhi</item>
-</string-array>
+    <string-array name="country_codes">
+        <item>91</item>
+        <item>81</item>
+        <item>71</item>
+    </string-array>
+    <string-array name="states">
+        <item>Tamil Nadu</item>
+        <item>Delhi</item>
+    </string-array>
 </resources>
